aside and image pre show

--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterUserName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterUserName.cshtml
@@ -25,6 +25,11 @@
                 </div>
             </form>
         </div>
+        <div class="col-md-8">
+            <p>UserName至多50個字</p>
+            <p>Password至多50個字</p>
+            <p>Password至少8個字</p>
+        </div>
     </div>
 
     <div>
