--- a/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
@@ -38,6 +38,11 @@
                 </div>
             </form>
         </div>
+        <div class="col-md-8">
+            <p>UserName至多50個字</p>
+            <p>Password至多50個字</p>
+            <p>Password至少8個字</p>
+        </div>
     </div>
 </div>
 @section endJS{
