--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserName.cshtml
@@ -1,36 +1,44 @@
-﻿@model CoreMVC5_UsedBookProject.ViewModels.RegisterViewModel
+﻿@model CoreMVC5_UsedBookProject.ViewModels.UserNameChangeViewModel
 
 @{
     ViewData["Title"] = "Register";
 }
 
 <div class="container-fluid">
-    <h1>註冊</h1>
+    <h1>變更使用者名稱</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Register">
+            <form asp-action="ChangeUserName">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="UserName" class="control-label"></label>
-                    <p>@ViewBag.UserName</p>
-                    <input asp-for="UserName" class="form-control d-none" value="@ViewBag.UserName" readonly />
-                    <span asp-validation-for="UserName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
+                    <span class="text-danger">*</span>
                     <label asp-for="Password" class="control-label"></label>
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
+                    @if (ViewBag.Error1 != null)
+                    {
+                        <span class="text-danger">@ViewBag.Error1</span>
+                    }
                 </div>
                 <div class="form-group">
-                    <label asp-for="ConfirmPassword" class="control-label"></label>
-                    <input asp-for="ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    <label asp-for="UserName" class="control-label"></label>
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger d-block"></span>
+                    @if (ViewBag.Error2 != null)
+                    {
+                        <span class="text-danger">@ViewBag.Error2</span>
+                    }
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="註冊" class="btn btn-primary" />
+                    <input type="submit" value="變更" class="btn btn-primary" />
                 </div>
             </form>
+        </div>
+        <div class="col-md-8">
+            <p>UserName至多50個字</p>
+            <p>Password至多50個字</p>
+            <p>Password至少8個字</p>
         </div>
     </div>
 
