--- a/CoreMVC5_UsedBookProject/Views/Account/ForgotPasswordUserName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ForgotPasswordUserName.cshtml
@@ -1,39 +1,33 @@
-﻿@model CoreMVC5_UsedBookProject.ViewModels.UserNameChangeViewModel
+﻿@model CoreMVC5_UsedBookProject.ViewModels.RegisterViewModel
 
 @{
     ViewData["Title"] = "Register";
 }
-
-<div class="container-fluid">
-    <h1>變更使用者名稱</h1>
+<div class="container-fluid pb-5">
+    <h1>忘記密碼</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="ChangeUserName">
+            <form asp-action="ForgotPasswordUserName">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <span class="text-danger">*</span>
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                    @if (ViewBag.Error1 != null)
-                    {
-                        <span class="text-danger">@ViewBag.Error1</span>
-                    }
-                </div>
                 <div class="form-group">
                     <label asp-for="UserName" class="control-label"></label>
                     <input asp-for="UserName" class="form-control" />
                     <span asp-validation-for="UserName" class="text-danger d-block"></span>
-                    @if (ViewBag.Error2 != null)
+                    @if (ViewBag.Error != null)
                     {
-                        <span class="text-danger">@ViewBag.Error2</span>
+                        <span class="text-danger">@ViewBag.Error</span>
                     }
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="變更" class="btn btn-primary" />
+                    <input type="submit" value="下一步" class="btn btn-primary" />
                 </div>
             </form>
+        </div>
+        <div class="col-md-8">
+            <p>UserName至多50個字</p>
+            <p>Password至多50個字</p>
+            <p>Password至少8個字</p>
         </div>
     </div>
 
@@ -41,6 +35,7 @@
         <a asp-action="Index" asp-controller="Home">回首頁</a>
     </div>
 </div>
+
 
 @section endJS
 {
