--- a/CoreMVC5_UsedBookProject/Views/Account/Register.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Register.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Register";
 }
-<div class="container-fluid pb-5">
-    <h1>忘記密碼</h1>
+
+<div class="container-fluid">
+    <h1>註冊</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="ForgotPassword">
+            <form asp-action="Register">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="UserName" class="control-label"></label>
@@ -27,9 +28,14 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="變更" class="btn btn-primary" />
+                    <input type="submit" value="註冊" class="btn btn-primary" />
                 </div>
             </form>
+        </div>
+        <div class="col-md-8">
+            <p>UserName至多50個字</p>
+            <p>Password至多50個字</p>
+            <p>Password至少8個字</p>
         </div>
     </div>
 
@@ -37,7 +43,6 @@
         <a asp-action="Index" asp-controller="Home">回首頁</a>
     </div>
 </div>
-
 
 @section endJS
 {
