--- a/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductImage.cshtml
@@ -19,22 +19,16 @@
         <tr>
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.Image1)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image1" class="form-control d-block flex-grow-1" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image1-clear" disabled>X</button>
+                <input type="hidden" name="Image1" class="form-control d-block" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image1-clear" disabled>X</button>
+                <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image1" alt="img1" id="img1">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file1" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    @if (action == "Create")
-                    {
-                        <input type="file" asp-for="File1" class="w-1px" accept="image/*" id="file1" />
-                    }
-                    else
-                    {
-                        <input type="file" asp-for="File1" class="w-1px" accept="image/*" id="file1" />
-                    }
+                    <input type="file" asp-for="File1" class="w-1px" accept="image/*" id="file1" />
                     <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
                 <span asp-validation-for="File1" class="text-danger"></span>
@@ -43,9 +37,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image2)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image2" class="form-control d-block flex-grow-1" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image2-clear">X</button>
+                <input type="hidden" name="Image2" class="form-control d-block" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image2-clear">X</button>
+                <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image2" alt="img2" id="img2">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file2" class="btn btn-primary">
@@ -59,9 +54,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image3)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image3" class="form-control d-block flex-grow-1" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image3-clear">X</button>
+                <input type="hidden" name="Image3" class="form-control d-block" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image3-clear">X</button>
+                <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image3" alt="img3" id="img3">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file3" class="btn btn-primary">
@@ -75,9 +71,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image4)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image4" class="form-control d-block flex-grow-1" value="@(Model.Image4 == null ? "無圖片" : Model.Image4)" id="Image4" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image4-clear">X</button>
+                <input type="hidden" name="Image4" class="form-control d-block" value="@(Model.Image4 == null ? "無圖片" : Model.Image4)" id="Image4" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image4-clear">X</button>
+                <div id="img4Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image4" alt="img4" id="img4">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file4" class="btn btn-primary">
@@ -91,9 +88,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image5)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image5" class="form-control d-block flex-grow-1" value="@(Model.Image5 == null ? "無圖片" : Model.Image5)" id="Image5" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image5-clear">X</button>
+                <input type="hidden" name="Image5" class="form-control d-block" value="@(Model.Image5 == null ? "無圖片" : Model.Image5)" id="Image5" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image5-clear">X</button>
+                <div id="img5Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image5" alt="img5" id="img5">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file5" class="btn btn-primary">
@@ -107,9 +105,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image6)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image6" class="form-control d-block flex-grow-1" value="@(Model.Image6 == null ? "無圖片" : Model.Image6)" id="Image6" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image6-clear">X</button>
+                <input type="hidden" name="Image6" class="form-control d-block" value="@(Model.Image6 == null ? "無圖片" : Model.Image6)" id="Image6" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image6-clear">X</button>
+                <div id="img6Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image6" alt="img6" id="img6">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file6" class="btn btn-primary">
@@ -123,9 +122,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image7)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image7" class="form-control d-block flex-grow-1" value="@(Model.Image7 == null ? "無圖片" : Model.Image7)" id="Image7" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image7-clear">X</button>
+                <input type="hidden" name="Image7" class="form-control d-block" value="@(Model.Image7 == null ? "無圖片" : Model.Image7)" id="Image7" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image7-clear">X</button>
+                <div id="img7Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image7" alt="img7" id="img7">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file7" class="btn btn-primary">
@@ -139,9 +139,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image8)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image8" class="form-control d-block flex-grow-1" value="@(Model.Image8 == null ? "無圖片" : Model.Image8)" id="Image8" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image8-clear">X</button>
+                <input type="hidden" name="Image8" class="form-control d-block" value="@(Model.Image8 == null ? "無圖片" : Model.Image8)" id="Image8" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image8-clear">X</button>
+                <div id="img8Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image8" alt="img8" id="img8">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file8" class="btn btn-primary">
@@ -155,9 +156,10 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image9)</td>
             <td>
-                <div class="d-flex">
-                    <input type="text" name="Image9" class="form-control d-block flex-grow-1" value="@(Model.Image9 == null ? "無圖片" : Model.Image9)" id="Image9" readonly />
-                    <button type="button" class="btn btn-danger d-block" id="Image9-clear">X</button>
+                <input type="hidden" name="Image9" class="form-control d-block" value="@(Model.Image9 == null ? "無圖片" : Model.Image9)" id="Image9" readonly />
+                <button type="button" class="btn btn-danger d-block" id="Image9-clear">X</button>
+                <div id="img9Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                    <img src="../Images/@Model.ProductId/@Model.Image9" alt="img9" id="img9">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file9" class="btn btn-primary">
