--- a/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
@@ -68,7 +68,59 @@
                     }
                     @if (item.Status == "已上架" || item.Status == "未上架")
                     {
-                        <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId})" class="btn btn-danger mt-2"><i class="bi bi-trash"></i> 刪除</a>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger mt-2" data-toggle="modal" data-target="#staticBackdrop">
+                            <i class="bi bi-trash"></i> 普通刪除
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        確認移至刪除區?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                                        <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-danger mt-2"><i class="bi bi-trash"></i> 刪除</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                    @if (item.Status != "已上架" && item.Status != "未上架")
+                    {
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger mt-2" data-toggle="modal" data-target="#staticBackdrop2">
+                            <i class="bi bi-trash"></i> 永久刪除
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop2" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        確認永久刪除?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                                        <a href="@Url.Action("PermanentDelete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-danger">確認刪除</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     }
                 </div>
             </div>
