--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -1,35 +1,35 @@
-﻿@if (User.Identity.IsAuthenticated)
+﻿@{
+    var route = ViewContext.RouteData;
+    string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
+    string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
+}
+@if (User.Identity.IsAuthenticated)
 {
     @if (User.IsInRole("Seller"))
     {
         @*已登入*@
         //顯示使用者名稱+登出按鈕
-        <div class="d-block">
-            <div id="hamber">
-                <a class="btn no-hide" id="login-btn" href="#">
-                    <i class="bi bi-file-person-fill"></i> 個人資訊
-                </a>
-            </div>
-            <div style="position: relative;">
-                <div class="login-menu">
-                    <div id="login-status">
-                        <p class="mb-0 p-3 text-center account-p no-hide" id="nickname">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</p>
-                        <a href="@Url.Action("Details", "SellerAccount")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-gear"></i> 設定</a>
-                        <a href="@Url.Action("SignOut", "SellerAccount")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
-                    </div>
-                </div>
+        <div class="d-flex align-items-center justify-content-center">
+            <label for="switch-login" class="mb-0 px-2" id="login">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</label><!--漢堡按鈕圖示-->
+            <input type="checkbox" id="switch-login" class="d-none" style="position: absolute; top: 0; right: 0;">
+            <div class="login-menu">
+                <p class="mb-0 p-3 text-center account-p" id="nickname">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</p>
+                <a href="@Url.Action("Details", "Account")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-gear"></i> 設定</a>
+                <a href="@Url.Action("SignOut", "Account")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
             </div>
         </div>
     }
     else
     {
-        <a href="@Url.Action("SignOut", "SellerAccount")" class="p-1 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
+        <div class="d-flex align-items-center justify-content-center">
+            <a href="@Url.Action("SignOut", "Account")" class="p-1 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
+        </div>
     }
 }
 else
 {
-    @*未登入*@
-    //登入按鈕+註冊
-    <a href="@Url.Action("Login", "SellerAccount")" class="p-1 account-a text-decoration-none">登入</a>
-    <a href="@Url.Action("RegisterUserName", "SellerAccount")" class="p-1 account-a text-decoration-none">註冊</a>
+    <div class="d-flex align-items-center justify-content-center">
+        <a href="@Url.Action("Login", "Account")" class="p-1 account-a text-decoration-none">登入</a>
+        <a href="@Url.Action("RegisterUserName", "Account")" class="p-1 account-a text-decoration-none">註冊</a>
+    </div>
 }
