--- a/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
@@ -6,18 +6,18 @@
     string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
     string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
 }
-@if (controller == "Seller")
-{
-    <ul class="pl-0" id="menu">
-        <li class="list-unstyled aside-text">
-            <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">賣家中心</strong></p>
-        </li>
-        <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})">賣家中心</a>
-        </li>
-        <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Home", new {})">回首頁</a>
-        </li>
+<ul class="pl-0" id="menu">
+    <li class="list-unstyled aside-text">
+        <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">首頁</strong></p>
+    </li>
+    <li class="list-unstyled aside-link">
+        <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})">賣家中心</a>
+    </li>
+    <li class="list-unstyled aside-link">
+        <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Home", new {})">主首頁</a>
+    </li>
+    @if (controller == "Seller")
+    {
         <li class="list-unstyled aside-text">
             <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">訂單管理</strong></p>
         </li>
@@ -42,32 +42,31 @@
         <li class="list-unstyled aside-link">
             <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Create", "Seller", new {})">新增商品</a>
         </li>
-    </ul>
-}
-else if (controller == "SellerAccount" && (action != "Login" && action != "RegisterUserName" && action != "Register"))
-{
-    <ul class="pl-0" id="menu">
+    }
+    else if (controller == "Account" && (action != "Login" && action != "RegisterUserName" && action != "Register"))
+    {
         <li class="list-unstyled aside-text">
             <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">個人管理</strong></p>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Details", "SellerAccount", new {})">我的資訊</a>
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Details", "Account", new {})">我的資訊</a>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangeUserInfo", "SellerAccount", new {})">變更資訊</a>
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangeUserInfo", "Account", new {})">變更資訊</a>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangePassword", "SellerAccount", new {})">變更密碼</a>
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangePassword", "Account", new {})">變更密碼</a>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangeUserName", "SellerAccount", new {})">變更使用者名稱</a>
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangeUserName", "Account", new {})">變更使用者名稱</a>
         </li>
         @if (User.IsInRole("Administrator"))
         {
             <li class="list-unstyled aside-link">
-                <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ForgotPasswordUserName", "SellerAccount", new {})">忘記密碼</a>
+                <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ForgotPasswordUserName", "Account", new {})">忘記密碼</a>
             </li>
         }
-    </ul>
-}
+    }
+</ul>
+
 
