首頁放一個partial

--- a/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
+<partial name="~/Views/Home/SearchProductbyName.cshtml" />
 
 @section topCSS{
     <link href="~/css/seller/myproducts.css" rel="stylesheet" />
