--- a/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
@@ -67,6 +67,15 @@
             </li>
         }
     }
+    else if (controller == "Home" || controller == "OrderByMoney")
+    {
+        <li class="list-unstyled aside-text">
+            <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">訂單管理</strong></p>
+        </li>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "OrderByMoney", new {})">我的資訊</a>
+        </li>
+    }
 </ul>
 
 
