--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -33,7 +33,7 @@
         {
             <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="../Images/@item.ProductId/@item.Image1" class="m-auto" alt="@item.Title" />
+                    <img src="../Images/Products/@item.ProductId/@item.Image1" class="m-auto" alt="@item.Title" />
                 </div>
                 <table class="container-fluid">
                     <tr><td>@Html.DisplayNameFor(model => model.Order.SellerId)</td><td>@item.SellerId</td></tr>
