--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/EditTablePartial.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/EditTablePartial.css
@@ -1,9 +1,4 @@
-﻿.w-1px {
-    width: 1px;
-    height: 1px;
-}
-
-.btn-outline-green {
+﻿.btn-outline-green {
     border: 1px solid green;
     color: green;
 }
