--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -9,8 +9,25 @@
     <h1>我的資訊</h1>
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="ChangeUserInfo">
+            <form asp-action="ChangeUserInfo" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <div class="d-flex py-2">
+                        <label asp-for="UserIcon" class="control-label"></label>
+                        <input type="hidden" name="UserIcon" class="form-control" value="@(Model.UserIcon == null ? "無圖片" : Model.UserIcon)" id="Image1" readonly />
+                        <button type="button" class="btn btn-danger d-block ml-5" id="Image1-clear">X</button>
+                    </div>
+                    <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black; overflow: hidden;">
+                        <img src="../Images/Users/@Model.Id/@Model.UserIcon" alt="img1" id="img1" style="border-radius: 50%;" onerror="this.src='../Images/Users/Shared/empty.png';">
+                    </div>
+                    <div class="d-flex align-items-end mt-2">
+                        <label for="file1" class="btn btn-primary">
+                            選擇檔案
+                        </label>
+                        <input type="file" asp-for="File1" class="d-none" accept="image/*" id="file1" />
+                        <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
+                    </div>
+                </div>
                 <div class="form-group">
                     <span class="text-danger">*</span>
                     <label asp-for="Nickname" class="control-label"></label>
@@ -36,4 +53,5 @@
 </div>
 @section endJS{
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/account/changeuserinfo.js"></script>
 }
