--- a/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
@@ -19,16 +19,16 @@
         <tr>
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.Image1)</td>
             <td>
-                <input type="hidden" name="Image1" class="form-control d-block" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
+                <input type="hidden" name="Image1" class="form-control" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image1-clear" disabled>X</button>
                 <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image1" alt="img1" id="img1">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image1" alt="img1" id="img1">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file1" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" asp-for="File1" class="w-1px" accept="image/*" id="file1" />
+                    <input type="file" asp-for="File1" class="d-none" accept="image/*" id="file1" />
                     <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
                 <span asp-validation-for="File1" class="text-danger"></span>
@@ -37,16 +37,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image2)</td>
             <td>
-                <input type="hidden" name="Image2" class="form-control d-block" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
+                <input type="hidden" name="Image2" class="form-control" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image2-clear">X</button>
                 <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image2" alt="img2" id="img2">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image2" alt="img2" id="img2">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file2" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file2" accept="image/*" id="file2" />
+                    <input type="file" class="d-none" name="file2" accept="image/*" id="file2" />
                     <p id="p-file2" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -54,16 +54,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image3)</td>
             <td>
-                <input type="hidden" name="Image3" class="form-control d-block" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
+                <input type="hidden" name="Image3" class="form-control" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image3-clear">X</button>
                 <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image3" alt="img3" id="img3">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image3" alt="img3" id="img3">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file3" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file3" accept="image/*" id="file3" />
+                    <input type="file" class="d-none" name="file3" accept="image/*" id="file3" />
                     <p id="p-file3" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -71,16 +71,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image4)</td>
             <td>
-                <input type="hidden" name="Image4" class="form-control d-block" value="@(Model.Image4 == null ? "無圖片" : Model.Image4)" id="Image4" readonly />
+                <input type="hidden" name="Image4" class="form-control" value="@(Model.Image4 == null ? "無圖片" : Model.Image4)" id="Image4" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image4-clear">X</button>
                 <div id="img4Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image4" alt="img4" id="img4">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image4" alt="img4" id="img4">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file4" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file4" accept="image/*" id="file4" />
+                    <input type="file" class="d-none" name="file4" accept="image/*" id="file4" />
                     <p id="p-file4" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -88,16 +88,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image5)</td>
             <td>
-                <input type="hidden" name="Image5" class="form-control d-block" value="@(Model.Image5 == null ? "無圖片" : Model.Image5)" id="Image5" readonly />
+                <input type="hidden" name="Image5" class="form-control" value="@(Model.Image5 == null ? "無圖片" : Model.Image5)" id="Image5" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image5-clear">X</button>
                 <div id="img5Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image5" alt="img5" id="img5">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image5" alt="img5" id="img5">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file5" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file5" accept="image/*" id="file5" />
+                    <input type="file" class="d-none" name="file5" accept="image/*" id="file5" />
                     <p id="p-file5" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -105,16 +105,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image6)</td>
             <td>
-                <input type="hidden" name="Image6" class="form-control d-block" value="@(Model.Image6 == null ? "無圖片" : Model.Image6)" id="Image6" readonly />
+                <input type="hidden" name="Image6" class="form-control" value="@(Model.Image6 == null ? "無圖片" : Model.Image6)" id="Image6" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image6-clear">X</button>
                 <div id="img6Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image6" alt="img6" id="img6">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image6" alt="img6" id="img6">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file6" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file6" accept="image/*" id="file6" />
+                    <input type="file" class="d-none" name="file6" accept="image/*" id="file6" />
                     <p id="p-file6" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -122,16 +122,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image7)</td>
             <td>
-                <input type="hidden" name="Image7" class="form-control d-block" value="@(Model.Image7 == null ? "無圖片" : Model.Image7)" id="Image7" readonly />
+                <input type="hidden" name="Image7" class="form-control" value="@(Model.Image7 == null ? "無圖片" : Model.Image7)" id="Image7" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image7-clear">X</button>
                 <div id="img7Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image7" alt="img7" id="img7">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image7" alt="img7" id="img7">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file7" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file7" accept="image/*" id="file7" />
+                    <input type="file" class="d-none" name="file7" accept="image/*" id="file7" />
                     <p id="p-file7" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -139,16 +139,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image8)</td>
             <td>
-                <input type="hidden" name="Image8" class="form-control d-block" value="@(Model.Image8 == null ? "無圖片" : Model.Image8)" id="Image8" readonly />
+                <input type="hidden" name="Image8" class="form-control" value="@(Model.Image8 == null ? "無圖片" : Model.Image8)" id="Image8" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image8-clear">X</button>
                 <div id="img8Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image8" alt="img8" id="img8">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image8" alt="img8" id="img8">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file8" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file8" accept="image/*" id="file8" />
+                    <input type="file" class="d-none" name="file8" accept="image/*" id="file8" />
                     <p id="p-file8" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
@@ -156,16 +156,16 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Image9)</td>
             <td>
-                <input type="hidden" name="Image9" class="form-control d-block" value="@(Model.Image9 == null ? "無圖片" : Model.Image9)" id="Image9" readonly />
+                <input type="hidden" name="Image9" class="form-control" value="@(Model.Image9 == null ? "無圖片" : Model.Image9)" id="Image9" readonly />
                 <button type="button" class="btn btn-danger d-block" id="Image9-clear">X</button>
                 <div id="img9Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                    <img src="../Images/@Model.ProductId/@Model.Image9" alt="img9" id="img9">
+                    <img src="../Images/Products/@Model.ProductId/@Model.Image9" alt="img9" id="img9">
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file9" class="btn btn-primary">
                         選擇檔案
                     </label>
-                    <input type="file" class="w-1px" name="file9" accept="image/*" id="file9" />
+                    <input type="file" class="d-none" name="file9" accept="image/*" id="file9" />
                     <p id="p-file9" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
             </td>
