--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -10,7 +10,14 @@
         @*已登入*@
         //顯示使用者名稱+登出按鈕
         <div class="d-flex align-items-center justify-content-center">
-            <label for="switch-login" class="mb-0 px-2" id="login">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</label><!--漢堡按鈕圖示-->
+            <label for="switch-login" class="mb-0 px-2" id="login">
+                <div class="p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 50px; overflow: hidden;">
+                    <img src="../Images/Users/@User.Claims.FirstOrDefault(c => c.Type.Contains("name")).Value/UserIcon.jpg" alt="img" style="border-radius: 50%;" onerror="this.src='../Images/Users/Shared/empty.png';">
+                </div>
+                <div id="login-nickname">
+                    @User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value
+                </div>
+            </label><!--漢堡按鈕圖示-->
             <input type="checkbox" id="switch-login" class="d-none" style="position: absolute; top: 0; right: 0;">
             <div class="login-menu">
                 <p class="mb-0 p-3 text-center account-p" id="nickname">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</p>
