--- a/CoreMVC5_UsedBookProject/Views/Seller/Edit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Edit.cshtml
@@ -26,9 +26,9 @@
     </form>
 </div>
 @section topCSS{
-    <link href="~/css/seller/edittablepartial.css" rel="stylesheet" />
+    <link href="~/css/seller/edittablepartial.css" asp-append-version="true" rel="stylesheet" />
 }
 @section endJS{
-    <script src="~/js/seller/edittablepartial.js"></script>
+    <script src="~/js/seller/edittablepartial.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 }
