--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -1,4 +1,5 @@
-﻿#menu {
+﻿/*aside*/
+#menu {
     width: 100%;
     height: fit-content;
 }
@@ -164,3 +165,47 @@ img {
 }
 @media (min-width:1200px) {
 }
+/*all*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+img {
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.gap-10px {
+    gap: 10px;
+}
+/*top btn*/
+#topBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+    #topBtn:hover {
+        background-color: #555; /* Add a dark-grey background on hover */
+    }
