--- a/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 <div class="container-fluid pb-5">
     <h1>變更密碼</h1>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-12">
             <form asp-action="ChangePassword">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
