--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -8,7 +8,7 @@
 <div class="container-fluid pb-5">
     <h1>我的資訊</h1>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-12">
             <form asp-action="ChangeUserInfo" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
@@ -18,7 +18,7 @@
                         <button type="button" class="btn btn-danger d-block ml-5" id="Image1-clear">X</button>
                     </div>
                     <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black; overflow: hidden;">
-                        <img src="../Images/Users/@Model.Id/@Model.UserIcon" alt="img1" id="img1" style="border-radius: 50%;" onerror="this.src='../Images/Users/Shared/empty.png';">
+                        <img src="../Images/Users/@Model.Id/@Model.UserIcon" alt="img1" id="img1" onerror="errorLoad(this)">
                     </div>
                     <div class="d-flex align-items-end mt-2">
                         <label for="file1" class="btn btn-primary">
@@ -51,7 +51,10 @@
         </div>
     </div>
 </div>
+@section topCss{
+    <link href="~/css/account/changeuserinfo.css" asp-append-version="true" rel="stylesheet" />
+}
 @section endJS{
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/js/account/changeuserinfo.js"></script>
+    <script src="~/js/account/changeuserinfo.js" asp-append-version="true"></script>
 }
