--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserName.cshtml
@@ -8,7 +8,7 @@
     <h1>變更使用者名稱</h1>
     <hr />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-12">
             <form asp-action="ChangeUserName">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
