--- a/CoreMVC5_UsedBookProject/Views/Account/ForgotPassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ForgotPassword.cshtml
@@ -7,7 +7,7 @@
     <h1>忘記密碼</h1>
     <hr />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-12">
             <form asp-action="ForgotPassword">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
