--- a/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
@@ -24,7 +24,7 @@
             {
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop">
-                    <i class="bi bi-trash"></i> 普通刪除
+                    <i class="bi bi-trash"></i> 刪除
                 </button>
 
                 <!-- Modal -->
@@ -78,7 +78,7 @@
     </form>
 </div>
 @section topCSS{
-    <link href="~/css/seller/detailtablepartial.css" rel="stylesheet" />
+    <link href="~/css/seller/detailtablepartial.css" asp-append-version="true" rel="stylesheet" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
@@ -90,6 +90,5 @@
     <script src="~/lib//Swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script src="~/js/Swiper/Swiper.js"></script>
-    <script src="~/js/seller/detailtablepartial.js"></script>
-    <script src="~/js/seller/reloadbydatetime.js"></script>
+    <script src="~/js/seller/detailtablepartial.js" asp-append-version="true"></script>
 }
