--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
-    <link href="~/css/seller/topbtn.css" rel="stylesheet" />
-    <link href="~/css/seller/modifiedpage.css" rel="stylesheet" />
-    <link href="~/css/seller/aside.css" rel="stylesheet" />
+    <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
+    <script src="~/js/seller/errorimg.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
     @RenderSection("topJS", required: false)
 </head>
@@ -46,8 +45,6 @@
     @RenderSection("endCSS", required: false)
     @RenderSection("endJS", required: false)
     @await RenderSectionAsync("Scripts", required: false)
-    <script src="~/js/seller/topbtn.js"></script>
-    <script src="~/js/seller/shownickname.js"></script>
-    <script src="~/js/seller/focus.js"></script>
+    <script src="~/js/seller/all.js" asp-append-version="true"></script>
 </body>
 </html>
