--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http;
+@{
     var route = ViewContext.RouteData;
     string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
     string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
@@ -9,18 +10,16 @@
     {
         @*已登入*@
         //顯示使用者名稱+登出按鈕
-        <div class="d-flex align-items-center justify-content-center">
+        <div class="d-flex align-items-center justify-content-center" style="width:200px;">
             <label for="switch-login" class="mb-0 px-2" id="login">
-                <div class="p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 50px; overflow: hidden;">
-                    <img src="../Images/Users/@User.Claims.FirstOrDefault(c => c.Type.Contains("name")).Value/UserIcon.jpg" alt="img" style="border-radius: 50%;" onerror="this.src='../Images/Users/Shared/empty.png';">
-                </div>
-                <div id="login-nickname">
-                    @User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value
-                </div>
+                <img class="p-2" src="../Images/Users/@User.Claims.FirstOrDefault(c => c.Type.Contains("name")).Value/@ViewBag.UserIcon" asp-append-version="true" alt="img" style="border-radius: 50%; width: 100%; aspect-ratio: 1 / 1; max-width: 50px; overflow: hidden; object-fit: cover;" onerror="this.src='../Images/Users/Shared/empty.png';">
+                <a id="login-nickname" class="px-2">
+                    @ViewBag.NickName
+                </a>
             </label><!--漢堡按鈕圖示-->
             <input type="checkbox" id="switch-login" class="d-none" style="position: absolute; top: 0; right: 0;">
             <div class="login-menu">
-                <p class="mb-0 p-3 text-center account-p" id="nickname">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</p>
+                <p class="mb-0 p-3 text-center account-p">@ViewBag.NickName</p>
                 <a href="@Url.Action("Details", "Account")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-gear"></i> 設定</a>
                 <a href="@Url.Action("SignOut", "Account")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
             </div>
