我的資訊改為訂單紀錄

--- a/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
@@ -76,7 +76,7 @@
             <p class="text-center py-3 mb-0"><strong>訂單管理</strong></p>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "OrderByMoney", new {})">我的資訊</a>
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "OrderByMoney", new {})">訂單紀錄</a>
         </li>
     }
 </ul>
