--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -9,7 +9,7 @@
 
 <div class="container-fluid">
     <h1>新增商品</h1>
-    <form action="~/Seller/Create" method="post" enctype="multipart/form-data">
+    <form action="~/Seller/Create" method="post" enctype="multipart/form-data" onsubmit="event.preventDefault(); validateMyForm();">
         <partial name="~/Views/Seller/CreateTablePartial/ProductInformation.cshtml" />
         <partial name="~/Views/Seller/CreateTablePartial/ProductImage.cshtml" />
         <partial name="~/Views/Seller/CreateTablePartial/SaleInformation.cshtml" />
@@ -34,6 +34,6 @@
 }
 
 @section endJS{
-    <script src="~/js/seller/edittablepartial.js" asp-append-version="true"></script>
+    <script src="~/js/seller/createtablepartial.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 }
