--- a/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
@@ -11,7 +11,7 @@
         <label for="switch-aside" class="mb-0 hamber"><i class="bi bi-list hamber-i"></i></label><!--漢堡按鈕圖示-->
         <input type="checkbox" id="switch-aside" class="d-none" style="position: absolute; top: 0; left: 0;">
         <div class="aside-menu">
-            <partial name="_SellerAsidePartial"></partial>
+            <partial name="_AsidePartial"></partial>
         </div>
     </div>
     <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Seller" asp-action="Index" style="font-size: 20px;"><strong>二手書平台-賣家中心</strong></a></div>
