--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -99,7 +99,7 @@ img {
     background-color: white;
     z-index: 999;
     width: 200px;
-    height: 90%;
+    height: calc(100% - 50px);
     overflow-y: auto;
 }
 .search-menu {
@@ -194,7 +194,7 @@ img {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
+    right: 20px; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
@@ -203,7 +203,7 @@ img {
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
+    font-size: 16px; /* Increase font size */
 }
 
     #topBtn:hover {
